# szkmipy

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  szkmipy.rst
src/szkmipy/: __init__.py  _version.py  boundingbox.py  mhd.py
tests/: test_boundingbox.py  test_mhd.py
